--- a/src/components/Product/styles.module.css
+++ b/src/components/Product/styles.module.css
@@ -14,6 +14,12 @@
   align-items: center;
 }
 
+.price {
+  color: green;
+  font-size: 12px;
+  font-weight: bold;
+}
+
 .button {
   display: flex;
   background: none;
@@ -21,5 +27,7 @@
 }
 
 .description {
+  font-size: 14px;
   min-height: 80px;
+  color: #333;
 }
